--- a/scss/modules/_buttons.scss
+++ b/scss/modules/_buttons.scss
@@ -87,6 +87,7 @@
     &.inline {
         display: inline-block;
         margin-right: $button-group-margin-right;
+        margin-bottom: 0;
     }
 
     &.vertical {
